WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90200
[chromium] Fix up more includes in compositor code
https://bugs.webkit.org/show_bug.cgi?id=90200
Summary
[chromium] Fix up more includes in compositor code
James Robinson
Reported
2012-06-28 13:17:33 PDT
[chromium] Fix up more includes in compositor code
Attachments
Patch
(5.55 KB, patch)
2012-06-28 13:18 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-06-28 13:18:03 PDT
Created
attachment 149994
[details]
Patch
Adrienne Walker
Comment 2
2012-06-28 13:18:43 PDT
Comment on
attachment 149994
[details]
Patch Rs=me.
James Robinson
Comment 3
2012-06-28 13:20:00 PDT
Comment on
attachment 149994
[details]
Patch Clearing flags on attachment: 149994 Committed
r121458
: <
http://trac.webkit.org/changeset/121458
>
James Robinson
Comment 4
2012-06-28 13:20:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug