third_party/WebKit/Source/WebCore/platform/graphics/chromium/ContentLayerChromium.cpp
@@ -39,7 +39,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "BitmapSkPictureCanvasLayerTextureUpdater.h"
 #include "FrameBufferSkPictureCanvasLayerTextureUpdater.h"
 #include "LayerPainterChromium.h"
-#include "PlatformSupport.h"
 #include "cc/CCLayerTreeHost.h"
 #include "cc/CCSettings.h"
 #include <public/Platform.h>
