third_party/WebKit/Source/WebCore/platform/graphics/chromium/ProgramBinding.cpp
@@ -35,6 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "LayerRendererChromium.h"
 #include "TraceEvent.h"
 #include <public/WebGraphicsContext3D.h>
+#include <wtf/text/CString.h>
 
 using WebKit::WebGraphicsContext3D;
 
