third_party/WebKit/Source/WebCore/platform/graphics/chromium/RenderSurfaceChromium.cpp
@@ -30,7 +30,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "RenderSurfaceChromium.h"
 
-#include "FilterOperations.h"
 #include "LayerChromium.h"
 #include "cc/CCMathUtil.h"
 #include <public/WebTransformationMatrix.h>
